[gd_scene load_steps=11 format=3 uid="uid://df2ya0uji0y7j"]

[ext_resource type="Script" uid="uid://b0v3tbwkw2asb" path="res://ui/hud/hud.gd" id="1_o2lis"]
[ext_resource type="Script" uid="uid://n0cmt74v5vsc" path="res://ui/hud/components/info_bar.gd" id="2_gfles"]
[ext_resource type="Texture2D" uid="uid://cl2cxrvb68mpl" path="res://assets/image/icon/camera.png" id="3_aixkq"]
[ext_resource type="Script" uid="uid://xvw5unpybtr6" path="res://ui/hud/components/notification/notification_area.gd" id="4_cxhb7"]
[ext_resource type="Script" uid="uid://cdw6orywl6kp0" path="res://ui/hud/components/city_options_panel.gd" id="5_5uuaq"]
[ext_resource type="Script" uid="uid://gqls0jr4r8su" path="res://ui/hud/components/game_options_panel.gd" id="6_p3vm3"]
[ext_resource type="Script" uid="uid://dg8figbfpd7wl" path="res://ui/class/button/ui_button.gd" id="7_gv4gi"]
[ext_resource type="Script" uid="uid://dmrfpngr24a4h" path="res://ui/hud/components/modal_overlay.gd" id="8_aixkq"]
[ext_resource type="Script" uid="uid://cwv5lcutbts75" path="res://data/component/fade_rect.gd" id="8_gfles"]
[ext_resource type="Script" uid="uid://bpocd385sre5h" path="res://main/container/ui_overlay.gd" id="10_cxhb7"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o2lis")
outer_margin = 8

[node name="MarginOuter" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NavMain" type="VBoxContainer" parent="MarginOuter"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="InfoBar" type="PanelContainer" parent="MarginOuter/NavMain"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_gfles")
metadata/_custom_type_script = "uid://n0cmt74v5vsc"

[node name="MarginInner" type="MarginContainer" parent="MarginOuter/NavMain/InfoBar"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ComponentStack" type="HBoxContainer" parent="MarginOuter/NavMain/InfoBar/MarginInner"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 32

[node name="LabelLocation" type="Label" parent="MarginOuter/NavMain/InfoBar/MarginInner/ComponentStack"]
unique_name_in_owner = true
layout_mode = 2
text = "NO_LOCATION"

[node name="LabelSublocation" type="Label" parent="MarginOuter/NavMain/InfoBar/MarginInner/ComponentStack"]
unique_name_in_owner = true
layout_mode = 2
text = "NO_SUBLOCATION"

[node name="LabelFPS" type="Label" parent="MarginOuter/NavMain/InfoBar/MarginInner/ComponentStack"]
unique_name_in_owner = true
layout_mode = 2
text = "00 fps"

[node name="Camera" type="HBoxContainer" parent="MarginOuter/NavMain/InfoBar/MarginInner/ComponentStack"]
layout_mode = 2

[node name="CameraDevMode" type="CheckButton" parent="MarginOuter/NavMain/InfoBar/MarginInner/ComponentStack/Camera"]
unique_name_in_owner = true
layout_mode = 2
icon = ExtResource("3_aixkq")

[node name="CameraZoom" type="Label" parent="MarginOuter/NavMain/InfoBar/MarginInner/ComponentStack/Camera"]
unique_name_in_owner = true
layout_mode = 2
text = "0.000x"

[node name="LabelClock" type="Label" parent="MarginOuter/NavMain/InfoBar/MarginInner/ComponentStack"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "1970-01-01T00:00:00"

[node name="NotificationArea" type="ScrollContainer" parent="MarginOuter/NavMain"]
unique_name_in_owner = true
custom_minimum_size = Vector2(416, 192)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
script = ExtResource("4_cxhb7")
metadata/_custom_type_script = "uid://xvw5unpybtr6"

[node name="MarginInner" type="MarginContainer" parent="MarginOuter/NavMain/NotificationArea"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="AlertStack" type="VBoxContainer" parent="MarginOuter/NavMain/NotificationArea/MarginInner"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginOuter/NavMain"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10

[node name="CityOptions" type="PanelContainer" parent="MarginOuter/NavMain/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
script = ExtResource("5_5uuaq")
metadata/_custom_type_script = "uid://cdw6orywl6kp0"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginOuter/NavMain/HBoxContainer/CityOptions"]
layout_mode = 2

[node name="SourceCity" type="OptionButton" parent="MarginOuter/NavMain/HBoxContainer/CityOptions/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "SOURCE"
popup/item_0/id = 0
popup/item_0/separator = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginOuter/NavMain/HBoxContainer/CityOptions/VBoxContainer"]
layout_mode = 2

[node name="DestCity" type="OptionButton" parent="MarginOuter/NavMain/HBoxContainer/CityOptions/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "DESTINATION"
popup/item_0/id = 0
popup/item_0/separator = true

[node name="Teleport" type="Button" parent="MarginOuter/NavMain/HBoxContainer/CityOptions/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TELEPORT"

[node name="TestAlertButton" type="Button" parent="MarginOuter/NavMain/HBoxContainer/CityOptions/VBoxContainer"]
layout_mode = 2
text = "ALERT"

[node name="TestAlertButton2" type="Button" parent="MarginOuter/NavMain/HBoxContainer/CityOptions/VBoxContainer"]
layout_mode = 2
text = "CONFIRM"

[node name="GameOptions" type="VBoxContainer" parent="MarginOuter/NavMain/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("6_p3vm3")
metadata/_custom_type_script = "uid://gqls0jr4r8su"

[node name="ButtonSave" type="Button" parent="MarginOuter/NavMain/HBoxContainer/GameOptions"]
unique_name_in_owner = true
layout_mode = 2
text = "SAVE"
script = ExtResource("7_gv4gi")
metadata/_custom_type_script = "uid://dg8figbfpd7wl"

[node name="ButtonLoad" type="Button" parent="MarginOuter/NavMain/HBoxContainer/GameOptions"]
unique_name_in_owner = true
layout_mode = 2
text = "LOAD"
script = ExtResource("7_gv4gi")
metadata/_custom_type_script = "uid://dg8figbfpd7wl"

[node name="ButtonPause" type="Button" parent="MarginOuter/NavMain/HBoxContainer/GameOptions"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "PAUSE"
script = ExtResource("7_gv4gi")
metadata/_custom_type_script = "uid://dg8figbfpd7wl"

[node name="ButtonQuit" type="Button" parent="MarginOuter/NavMain/HBoxContainer/GameOptions"]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT"
script = ExtResource("7_gv4gi")
metadata/_custom_type_script = "uid://dg8figbfpd7wl"

[node name="Modal" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_aixkq")
metadata/_custom_type_script = "uid://dmrfpngr24a4h"

[node name="Background" type="ColorRect" parent="Modal"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("8_gfles")
metadata/_custom_type_script = "uid://cwv5lcutbts75"

[node name="Notifications" type="Control" parent="Modal"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_cxhb7")
metadata/_custom_type_script = "uid://bpocd385sre5h"

[connection signal="pressed" from="MarginOuter/NavMain/HBoxContainer/CityOptions/VBoxContainer/TestAlertButton" to="." method="_on_test_alert_button_pressed"]
[connection signal="pressed" from="MarginOuter/NavMain/HBoxContainer/CityOptions/VBoxContainer/TestAlertButton2" to="." method="_on_test_alert_button_2_pressed"]
